[gd_scene load_steps=5 format=3 uid="uid://dmclngylk2umt"]

[ext_resource type="Script" path="res://scripts/gui/main_menu.gd" id="1_ajixg"]
[ext_resource type="PackedScene" uid="uid://c8h2ng4nxt0hl" path="res://scenes/gui/options_menu.tscn" id="2_dx2bx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_krk17"]
bg_color = Color(0.471283, 0.168313, 0.57373, 1)

[sub_resource type="SystemFont" id="SystemFont_mkhhn"]
font_names = PackedStringArray("Impact")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ajixg")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_krk17")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_mkhhn")
theme_override_font_sizes/font_size = 30
text = "Game Title
"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_dx2bx")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="exit_options_menu" from="OptionsMenu" to="." method="_on_exit_options_menu"]
